# mythos-aegis-v2

./: .coverage  .dockerignore  .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  DEMO_SCRIPT.md  Dockerfile  FINAL_SUBMISSION_REPORT.md  MENTOR_DEMO_CHECKLIST.md  MENTOR_EMAIL.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-render.txt
.github/workflows/: ci.yml  docker.yml  security.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_enable_pgvector.py  a9f2c4b8e1d3_vision_intelligence.py  aef8c3b72d1a_initial_schema.py  b2f4e8a1c3d5_saas_tables.py  c4e7d2f1a8b6_rag_documents.py  d7b3e1f4a2c8_billing.py  e8c2a5f3b9d1_agent_runtime.py  f3a8d1c5e2b7_workflow_engine.py
app/: main.py  orchestrator.py
app/agent/: llm.py  memory.py  orchestrator.py  prompt_builder.py  routes.py  runtime.py  schemas.py
app/ai_gateway/: __init__.py  cost_engine.py  quota.py  router.py  schemas.py  service.py
app/auth/: dependencies.py  jwt.py  middleware.py  permissions.py
app/billing/: models.py  quota.py  routes.py  schemas.py  service.py
app/core/: config.py  errors.py  exceptions.py  logging.py  result.py  security_context.py
app/db/: session.py
app/domain/: common.py
app/intent/: classifier.py  enums.py  (+2 more)
docker/: entrypoint.sh
docs/: DEMO.md  Mythos_Aegis_Final_Presentation.pptx  PROJECT_STATUS.md  disaster-recovery.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  postgres-backup-cronjob.yaml  secrets.example.yaml  service.yaml
scripts/: _check_db.py  _e2e_smoke_test.py  _rag_db_smoke_test.py  _rag_smoke_test.py  _supabase_verify.py  _test_conn.py  _verify_rag_pipeline.py  _verify_rag_tables.py  backup_postgres.sh  restore_postgres.sh  take_screenshots.js  verify.ps1  verify.sh  verify_restore.sh
(+199 files in other folders)
