[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mythos-aegis"
version = "0.1.0"
description = "Mythos Aegis – Phase 1 deterministic intent parser and security boundary gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "prometheus-client>=0.20.0",
    "sqlglot>=23.0.0",
    "python-json-logger>=2.0.7",
    "PyJWT[crypto]>=2.8.0",
    "redis[hiredis]>=5.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["app/tests"]
skips = ["B101"]
